# grok-v2a

./: .env  .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
config/: pybricks_api.json  rover_specs.json  template.py
src/: handlers.rs  main.rs  models.rs  templates.rs
static/: script.js  style.css
templates/: index.html
