[package]
name = "grok-v2a"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "^0.7"
axum-extra = { version = "0.9", features = ["multipart"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
bytes = "1.5"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15" # For loading environment variables from .env
tower-http = { version = "0.5", features = ["fs"] }